# figcone_json

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
cmake/: figcone_jsonConfig.cmake.in
include/figcone_json/: parser.h
release_pack/: CMakeLists.txt  release.sh
release_pack/figcone_json_deps/: CMakeLists.txt
src/: parser.cpp
tests/: CMakeLists.txt  test_nodelistparser.cpp  test_nodeparser.cpp  test_paramlistparser.cpp  test_paramparser.cpp
